refactor(tests): Migrate tests to JUnit 5 with VertxExtension support
- Migrated test classes from `KeelUnitTest` to `KeelJUnit5Test`, incorporating Vertx support using `VertxExtension` and `VertxTestContext`.
- Updated test methods to utilize asynchronous Vertx structures, improving compatibility and readability.
- Enhanced handling of temporary files in tests to avoid resource leaks.
- Replaced asynchronous file operations with synchronous methods in `KeelConfigPropertiesBuilderTest`, ensuring reliability.

Signed-off-by: sinri <e.joshua.s.e@gmail.com>