@@ -1,8 +1,12 @@
 package io.github.sinri.keel.facade.async;
 
-import io.github.sinri.keel.facade.tesuto.unit.KeelUnitTest;
+import io.github.sinri.keel.facade.tesuto.unit.KeelJUnit5Test;
 import io.vertx.core.Future;
+import io.vertx.core.Vertx;
+import io.vertx.junit5.VertxExtension;
+import io.vertx.junit5.VertxTestContext;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -13,85 +17,115 @@ import static io.github.sinri.keel.facade.KeelInstance.Keel;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-class KeelAsyncMixinLogicTest extends KeelUnitTest {
+@ExtendWith(VertxExtension.class)
+class KeelAsyncMixinLogicTest extends KeelJUnit5Test {
+
+    public KeelAsyncMixinLogicTest(Vertx vertx) {
+        super(vertx);
+    }
 
     @Test
-    void testAsyncCallRepeatedly() {
+    void testAsyncCallRepeatedly(VertxTestContext testContext) {
         AtomicInteger counter = new AtomicInteger(0);
-        async(() -> Keel.asyncCallRepeatedly(task -> {
+        Keel.asyncCallRepeatedly(task -> {
             int current = counter.incrementAndGet();
             if (current >= 3) {
                 task.stop();
             }
             return Future.succeededFuture();
-        }));
-
-        assertEquals(3, counter.get(), "Task should be executed 3 times");
+        }).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(3, counter.get(), "Task should be executed 3 times");
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIteratively() {
+    void testAsyncCallIteratively(VertxTestContext testContext) {
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
         List<Integer> processed = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 numbers,
                 (num) -> {
                     processed.add(num);
                     return Future.succeededFuture();
                 }
-        ));
-
-        assertEquals(numbers, processed, "All numbers should be processed in order");
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(numbers, processed, "All numbers should be processed in order");
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithBatch() {
+    void testAsyncCallIterativelyWithBatch(VertxTestContext testContext) {
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6, 7);
         List<List<Integer>> batches = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 numbers,
                 (batch, task) -> {
                     batches.add(new ArrayList<>(batch));
                     return Future.succeededFuture();
                 },
                 3
-        ));
-
-        assertEquals(3, batches.size(), "Should have correct number of batches");
-        assertEquals(Arrays.asList(1, 2, 3), batches.get(0));
-        assertEquals(Arrays.asList(4, 5, 6), batches.get(1));
-        assertEquals(List.of(7), batches.get(2));
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(3, batches.size(), "Should have correct number of batches");
+                assertEquals(Arrays.asList(1, 2, 3), batches.get(0));
+                assertEquals(Arrays.asList(4, 5, 6), batches.get(1));
+                assertEquals(List.of(7), batches.get(2));
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallStepwise() {
+    void testAsyncCallStepwise(VertxTestContext testContext) {
         List<Long> steps = new ArrayList<>();
-        async(() -> Keel.asyncCallStepwise(5, (step) -> {
+        Keel.asyncCallStepwise(5, (step) -> {
             steps.add(step);
             return Future.succeededFuture();
-        }));
-
-        assertEquals(5, steps.size(), "Should execute 5 times");
-        for (int i = 0; i < 5; i++) {
-            assertEquals(i, steps.get(i), "Steps should be in order");
-        }
+        }).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(5, steps.size(), "Should execute 5 times");
+                for (int i = 0; i < 5; i++) {
+                    assertEquals(i, steps.get(i), "Steps should be in order");
+                }
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallStepwiseWithRange() {
+    void testAsyncCallStepwiseWithRange(VertxTestContext testContext) {
         List<Long> steps = new ArrayList<>();
-        async(() -> Keel.asyncCallStepwise(2, 8, 2, (step, task) -> {
+        Keel.asyncCallStepwise(2, 8, 2, (step, task) -> {
             steps.add(step);
             return Future.succeededFuture();
-        }));
-
-        assertEquals(Arrays.asList(2L, 4L, 6L), steps, "Should execute with correct step increments");
+        }).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(Arrays.asList(2L, 4L, 6L), steps, "Should execute with correct step increments");
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallEndlessly() {
+    void testAsyncCallEndlessly(VertxTestContext testContext) {
         AtomicInteger counter = new AtomicInteger(0);
         Future<Void> interrupter = Future.future(promise -> {
             Keel.getVertx().setTimer(100, id -> promise.complete());
@@ -102,131 +136,172 @@ class KeelAsyncMixinLogicTest extends KeelUnitTest {
             return interrupter.succeeded() ? interrupter : Future.succeededFuture();
         });
 
-        async(() -> interrupter);
-        assertTrue(counter.get() > 0, "Task should be executed at least once");
+        interrupter.onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertTrue(counter.get() > 0, "Task should be executed at least once");
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithEmptyIterator() {
+    void testAsyncCallIterativelyWithEmptyIterator(VertxTestContext testContext) {
         List<Integer> emptyList = new ArrayList<>();
         List<Integer> processed = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 emptyList,
                 (num) -> {
                     processed.add(num);
                     return Future.succeededFuture();
                 }
-        ));
-
-        assertTrue(processed.isEmpty(), "Empty iterator should not process any items");
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertTrue(processed.isEmpty(), "Empty iterator should not process any items");
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithBatchEmptyIterator() {
+    void testAsyncCallIterativelyWithBatchEmptyIterator(VertxTestContext testContext) {
         List<Integer> emptyList = new ArrayList<>();
         List<List<Integer>> batches = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 emptyList,
                 (batch, task) -> {
                     batches.add(new ArrayList<>(batch));
                     return Future.succeededFuture();
                 },
                 3
-        ));
-
-        assertTrue(batches.isEmpty(), "Empty iterator should not create any batches");
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertTrue(batches.isEmpty(), "Empty iterator should not create any batches");
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithBatchSizeLargerThanElements() {
+    void testAsyncCallIterativelyWithBatchSizeLargerThanElements(VertxTestContext testContext) {
         List<Integer> numbers = Arrays.asList(1, 2);
         List<List<Integer>> batches = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 numbers,
                 (batch, task) -> {
                     batches.add(new ArrayList<>(batch));
                     return Future.succeededFuture();
                 },
                 5  // batchSize larger than total elements
-        ));
-
-        assertEquals(1, batches.size(), "Should have only one batch when batchSize > total elements");
-        assertEquals(Arrays.asList(1, 2), batches.get(0));
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(1, batches.size(), "Should have only one batch when batchSize > total elements");
+                assertEquals(Arrays.asList(1, 2), batches.get(0));
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithBatchSizeEqualToElements() {
+    void testAsyncCallIterativelyWithBatchSizeEqualToElements(VertxTestContext testContext) {
         List<Integer> numbers = Arrays.asList(1, 2, 3);
         List<List<Integer>> batches = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 numbers,
                 (batch, task) -> {
                     batches.add(new ArrayList<>(batch));
                     return Future.succeededFuture();
                 },
                 3  // batchSize equals total elements
-        ));
-
-        assertEquals(1, batches.size(), "Should have only one batch when batchSize equals total elements");
-        assertEquals(Arrays.asList(1, 2, 3), batches.get(0));
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(1, batches.size(), "Should have only one batch when batchSize equals total elements");
+                assertEquals(Arrays.asList(1, 2, 3), batches.get(0));
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithSingleElement() {
+    void testAsyncCallIterativelyWithSingleElement(VertxTestContext testContext) {
         List<Integer> numbers = List.of(42);
         List<Integer> processed = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 numbers,
                 (num) -> {
                     processed.add(num);
                     return Future.succeededFuture();
                 }
-        ));
-
-        assertEquals(1, processed.size(), "Should process single element");
-        assertEquals(42, processed.get(0));
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(1, processed.size(), "Should process single element");
+                assertEquals(42, processed.get(0));
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithBatchSingleElement() {
+    void testAsyncCallIterativelyWithBatchSingleElement(VertxTestContext testContext) {
         List<Integer> numbers = List.of(42);
         List<List<Integer>> batches = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 numbers,
                 (batch, task) -> {
                     batches.add(new ArrayList<>(batch));
                     return Future.succeededFuture();
                 },
                 3
-        ));
-
-        assertEquals(1, batches.size(), "Should have one batch for single element");
-        assertEquals(List.of(42), batches.get(0));
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(1, batches.size(), "Should have one batch for single element");
+                assertEquals(List.of(42), batches.get(0));
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 
     @Test
-    void testAsyncCallIterativelyWithBatchExactMultiple() {
+    void testAsyncCallIterativelyWithBatchExactMultiple(VertxTestContext testContext) {
         List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5, 6);
         List<List<Integer>> batches = new ArrayList<>();
 
-        async(() -> Keel.asyncCallIteratively(
+        Keel.asyncCallIteratively(
                 numbers,
                 (batch, task) -> {
                     batches.add(new ArrayList<>(batch));
                     return Future.succeededFuture();
                 },
                 2  // batchSize divides total elements exactly
-        ));
-
-        assertEquals(3, batches.size(), "Should have correct number of batches for exact multiple");
-        assertEquals(Arrays.asList(1, 2), batches.get(0));
-        assertEquals(Arrays.asList(3, 4), batches.get(1));
-        assertEquals(Arrays.asList(5, 6), batches.get(2));
+        ).onComplete(ar -> {
+            if (ar.succeeded()) {
+                assertEquals(3, batches.size(), "Should have correct number of batches for exact multiple");
+                assertEquals(Arrays.asList(1, 2), batches.get(0));
+                assertEquals(Arrays.asList(3, 4), batches.get(1));
+                assertEquals(Arrays.asList(5, 6), batches.get(2));
+                testContext.completeNow();
+            } else {
+                testContext.failNow(ar.cause());
+            }
+        });
     }
 }
